# iocx

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PHILOSOPHY.md  README-pypi.md  README.md  SECURITY.md  TRADEMARK_POLICY.md  pyproject.toml  pytest.ini
.github/workflows/: analyse.yml  ci.yml  perf-history.yml
dashboards/: PERFORMANCE.md
docs/: pe-pipeline.md  performance.md  plugins.md
docs/security/: threat-model.md
docs/specs/: README.md  overlap-suppression.md  plugin-authoring-guidelines.md  reason-codes.md  structural-validation-deterministic-heuristics.md
docs/testing/: contract_safe_testing.md
examples/: README.md
examples/generators/: __init__.py
history/raw/: perf_2026-04-01_15-51-30.json  perf_2026-04-01_15-57-55.json  perf_2026-04-01_16-05-43.json  perf_2026-04-01_16-07-01.json  perf_2026-04-01_16-14-52.json
history/summaries/: summary_2026-04-01_15-51-30.json  summary_2026-04-01_15-57-55.json  summary_2026-04-01_16-05-43.json  summary_2026-04-01_16-07-01.json  summary_2026-04-01_16-14-52.json
iocx/: detectors.py  engine.py  models.py  reason_codes.py  utils.py
iocx/analysis/: extended.py  heuristics.py  obfuscation.py
iocx/cli/: CLI.md  __init__.py  main.py
iocx/detectors/: __init__.py  registry.py
iocx/extractors/: __init__.py  base64.py  domains.py  emails.py  filepaths.py  hashes.py  ips.py  urls.py
iocx/parsers/: __init__.py  language_map.py  pe_parser.py  pe_resources.py  string_extractor.py
iocx/plugins/: api.py  loader.py  metadata.py  registry.py
iocx/schemas/: analysis.py  internal_schema.py  public_metadata.py
iocx/validators/: __init__.py  decorators.py  dedupe.py  entropy.py  entrypoint.py  imports.py  normalise.py  optional_header.py  resources.py  rva_graph.py  schema.py  sections.py  signature.py  tls.py
malx_ioc_extractor/: engine.py
malx_ioc_extractor/cli/: main.py
malx_ioc_extractor/extractors/: __init__.py  emails.py  hashes.py
malx_ioc_extractor/parsers/: pe_parser.py  string_extractor.py
scripts/: extract_perf.py  generate_perf_dashboard.py
tests/: README.md  conftest.py  test_engine.py
tests/contract/: test_pipeline.py  test_snapshot_contract.py
tests/integration/: test_cli_file_input.py  test_cli_real_binaries.py  test_cli_rsrc_iocs.py  test_cli_text_input.py  test_pe_fixtures.py  (+6 more)
(+242 files in other folders)
