[project]
name = "iocx"
version = "0.2.0"
description = "Static IOC extraction engine for binaries, text, and logs."
authors = [
    { name = "MalX Labs" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "pefile",
    "python-magic",
]

[project.scripts]
iocx = "iocx.cli.main:main"

[project.urls]
Homepage = "https://iocx.dev"
Repository = "https://github.com/malx-labs/malx-ioc-extractor"
Issues = "https://github.com/malx-labs/malx-ioc-extractor/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
